<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.example.ExpenseTracker.MainActivity">

    <item
        android:id="@+id/settings"
        android:orderInCategory="1"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/about"
        android:orderInCategory="2"
        android:icon="@drawable/ic_info_white_24dp"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/clear_data"
        android:orderInCategory="3"
        android:title="@string/clear_all"
        app:showAsAction="never"/>


</menu>