<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/bottom_navigation_height"
    tools:context=".OverviewFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Title of Graph -->
            <TextView
                android:id="@+id/graph_title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/edge_spacing"
                android:text="@string/summary_text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textStyle="bold"
                app:fontFamily="sans-serif-smallcaps" />

            <!-- Pie Graph starts here -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/graph_constraintLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <!-- Full progress bar -->
                <ProgressBar
                    android:id="@+id/background_progressbar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="@dimen/graph_size"
                    android:layout_height="@dimen/graph_size"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="100"
                    android:progressDrawable="@drawable/graph_full"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- % value complete progress bar-->
                <ProgressBar
                    android:id="@+id/revenue_progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="@dimen/graph_size"
                    android:layout_height="@dimen/graph_size"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="0"
                    android:progressDrawable="@drawable/graph_progress"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- title for center of pie chart -->
                <TextView
                    android:id="@+id/profit_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="64dp"
                    android:text="@string/yearly_profit_title"
                    android:textSize="22sp"
                    app:fontFamily="sans-serif-condensed-medium"
                    app:layout_constraintBottom_toTopOf="@+id/profit_textview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- TextView for profit for center of pie chart -->
                <TextView
                    android:id="@+id/profit_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/large_edge_spacing"
                    android:text="@string/zero"
                    android:textSize="22sp"
                    app:fontFamily="sans-serif-condensed-medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/profit_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- TextViews to hold expense and revenue data -->
            <TextView
                android:id="@+id/total_expense_textView"
                style="@style/chart_text_view_style"
                android:background="@drawable/red_back_outline"
                android:text="@string/expenses_total_text" />

            <TextView
                android:id="@+id/total_revenue_textView"
                style="@style/chart_text_view_style"
                android:background="@drawable/green_back_outline"
                android:text="@string/revenue_total_text" />

            <!-- Expanding text button to load expenseType data -->
            <Button
                android:id="@+id/expense_summary_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/edge_spacing"
                android:layout_marginBottom="@dimen/edge_spacing"
                android:background="@color/darkGrey"
                android:gravity="center"
                android:text="@string/expense_summary"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                app:fontFamily="sans-serif-condensed-light" />

            <!-- TextViews to show expenseType data -->
            <LinearLayout
                android:id="@+id/expense_percent_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rent_percentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/rent_expense_percent"
                    android:textSize="20sp"
                    app:fontFamily="sans-serif-condensed-medium" />

                <TextView
                    android:id="@+id/food_percentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/reduced_edge_spacing"
                    android:gravity="center"
                    android:text="@string/food_expense_percent"
                    android:textSize="20sp"
                    app:fontFamily="sans-serif-condensed-medium" />

                <TextView
                    android:id="@+id/bills_percentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bills_expense_percent"
                    android:textSize="20sp"
                    app:fontFamily="sans-serif-condensed-medium" />

                <TextView
                    android:id="@+id/shopping_percentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/reduced_edge_spacing"
                    android:gravity="center"
                    android:text="@string/shopping_expense_percent"
                    android:textSize="20sp"
                    app:fontFamily="sans-serif-condensed-medium" />

                <TextView
                    android:id="@+id/other_percentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/other_expense_percent"
                    android:textSize="20sp"
                    app:fontFamily="sans-serif-condensed-medium" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
